recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: type List takes type parameters
var rep:List = l(0)::l(l.length-2)
        ^butLast:3: error: value :: is not a member of Int
var rep:List = l(0)::l(l.length-2)
                   ^